# TradingEngine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/production/: ES_deployment.json
artifacts/reports/: ES_backtest.json  ES_profiles_summary.csv  ES_profiles_summary.json
artifacts/schema/: ES_features.json
config/: ibkr.yaml  production_ES.yaml  universe.yaml
config/profiles/: ES_profiles.yaml
scripts/: generate_synthetic_data.py
src/: __init__.py  cli.py  config.py  deployment.py
src/api/: app.py
src/backtest/: engine.py  profile_eval.py  walk_forward.py
src/data/brokers/: yahoo_adapter.py
src/data_engine/: ibkr_fetch.py
src/features/: builder.py  regime.py
src/labels/: triple_barrier.py
src/live/: paper_engine.py
src/models/: explainability.py
src/risk/: funded_guard.py  risk_manager.py
src/strategy/: position_sizing.py  rules_signal.py  signal_engine.py
src/training/: train.py
src/utils/: alignment.py  logger.py  math_utils.py  paths.py  time_utils.py
tests/: test_config.py  test_hardening.py  test_labeler.py  test_math_utils.py  test_prop_risk.py  test_regime.py  test_risk_manager.py  test_signal_engine.py  test_threshold_alignment.py  test_train.py  test_walk_forward.py
